[package]
name = "epson"
version = "0.1.0"
authors = ["andrei <losev_andrei@bk.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4"
anyhow = "1.0"
barcoders = "1.0.2"
bitflags = "1.2.1"
clap = "2.33.3"
encoding = "0.2.33"
fs2 = "0.4.3"
image = { version = "0.23.14", default-features = false }
pulldown-cmark = "0.8.0"
qrcode = { version = "0.12", default-features = false }
